--- a/.gitignore
+++ b/.gitignore
@@ -74,6 +74,10 @@ target/
 
 # pyenv
 .python-version
+bin/
+include/
+lib/
+share/
 
 # celery beat schedule file
 celerybeat-schedule
@@ -102,3 +106,6 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+# Mac OS
+.DS_Store
