--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,5 @@
 [pytest]
-python_path=lib
+mock_use_standalone_module = true
+python_files=test_*.py console_*.py
+DJANGO_SETTINGS_MODULE = identity.settings
+python_paths=lib infrastructure/
