--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,19 @@ argon2-cffi==19.1.0
 atomicwrites==1.2.1
 attrs==18.2.0
 cffi==1.11.5
+Django==2.1.5
+django-mock-queries==2.1.1
+mock==2.0.0
+model-mommy==1.6.0
 more-itertools==5.0.0
 passlib==1.7.1
+pbr==5.1.1
 pluggy==0.8.1
 py==1.7.0
 pycparser==2.19
 pytest==4.1.1
+pytest-django==3.4.5
+pytest-mock==1.10.0
+pytest-pythonpath==0.7.3
+pytz==2018.9
 six==1.12.0
